<resources>
    <string name="app_name">appV1</string>
    <string name="filter_resaults">Filter Resaults</string>
    <string name="price_range">Price Range</string>
    <string name="leasure">Leasure</string>
    <string name="lifestyle">Lifestyle</string>
    <string name="active">Active</string>
    <string name="food_drink"><![CDATA[Food & Drink]]></string>
    <string name="group">Group</string>
    <string name="filter">Filter</string>
    <string name="pound">£</string>
    <string name="from">from</string>
    <string name="too">too</string>
</resources>
